Fixed an incorrect import, fixed a line that was too long, removed an unnecessary debug statement, changed a warning message to an error message, and fixed a sizing issue on the evaluation listener page.

--- a/python/services/evaluationservice/dmod/evaluationservice/evaluation_service/static/evaluation_service/css/evaluation_listener.css
+++ b/python/services/evaluationservice/dmod/evaluationservice/evaluation_service/static/evaluation_service/css/evaluation_listener.css
@@ -35,6 +35,10 @@ body {
     margin: 5px;
 }
 
+#message-area {
+    height: 100%;
+}
+
 #editor-header {
     border-bottom: 1px solid black;
     padding-bottom: 5px;
